lexer_parser/src/test/exempleFile/miniJaja/success/caractereSpecial.mjj
/****************************************/
/* Programme MiniJaja			*/
/* Validation des caracteres speciaux */
/****************************************/
/* Test des accents --> doit echouer
*/

class caractereSpecial{ 

    
    main {
        int é = 5;
    }
}
