lexer_parser/src/test/exempleFile/miniJaja/fail/varTypeDouble.mjj
/****************************************/
/* Programme MiniJaja			*/
/* Validation d'un mauvais type */
/****************************************/
/* Test d'un mauvais type --> doit echouer
*/

class varTypeDouble{ 

    
    main {
        double x = 5;
        
    }
}
